<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>it.cavallium</groupId>
	<artifactId>warppi</artifactId>
	<version>0.10.0-alpha</version>
	<packaging>pom</packaging>

	<name>WarpPI Calculator</name>
	<description>WarpPI Calculator aggregate project</description>
	<url>https://warp.ovh</url>

	<developers>
		<developer>
			<id>Cavallium</id>
			<name>Andrea Cavalli</name>
			<email>andrea@warp.ovh</email>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/Cavallium/WarpPI</url>
		<connection>scm:git:git@github.com:Cavallium/WarpPI.git</connection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.release>11</maven.compiler.release>
		<src.dir>src/main/java</src.dir>
		<src.dir2>src/main/java</src.dir2>
		<src.resdir>src/main/resources</src.resdir>
		<buildprops.exclude1>veryverylongandparticularpath/abcd</buildprops.exclude1>
	</properties>

	<modules>
		<module>core</module>
		<module>util</module>
		<module>bigdecimal-math</module>
		<!-- <module>hardware</module> -->
		<module>desktop</module>
		<module>engine-jogl</module>
	</modules>

	<profiles>
		<profile>
			<id>generate-js</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>teavm</module>
			</modules>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>teavm-dev</id>
			<url>https://dl.bintray.com/konsoletyper/teavm</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>default</layout>
		</repository>
		<repository>
			<id>oss-snapshots-repo</id>
			<name>Sonatype OSS Maven Repository</name>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>jitpack.io</id>           <!-- JitPack allows github repo to be used as a maven repo -->
			<url>https://jitpack.io</url> <!-- For documentation: http://jitpack.io/ -->
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>1_teavm-dev</id>
			<url>https://dl.bintray.com/konsoletyper/teavm</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<layout>default</layout>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/releases/</url>
			<layout>default</layout>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.5.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>it.unimi.dsi</groupId>
				<artifactId>fastutil</artifactId>
				<version>8.2.2</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.8.5</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.8.1</version>
			</dependency>
			<dependency>
				<groupId>ar.com.hjg</groupId>
				<artifactId>pngj</artifactId>
				<version>2.1.0</version>
			</dependency>
			<dependency>
				<groupId>ar.com.hjg</groupId>
				<artifactId>pngj</artifactId>
				<version>2.1.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>WarpPICalculator</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>post-integration-test</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
					<configuration>
						<useSystemClassLoader>false</useSystemClassLoader>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>3.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
